Allow deployments to provide AI hosting
